# High-Frequency-Trading-System

./: .gitignore  CMakeLists.txt  requirements.txt
Chapter10/common/: lf_queue.h  logging.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  socket_utils.h  tcp_socket.cpp
Chapter10/exchange/: exchange_main.cpp
Chapter10/exchange/market_data/: market_data_publisher.cpp  snapshot_synthesizer.cpp
Chapter10/exchange/matcher/: matching_engine.h  me_order.h  me_order_book.h
Chapter10/exchange/order_server/: client_response.h  fifo_sequencer.h  order_server.h
Chapter10/trading/: trading_main.cpp
Chapter10/trading/market_data/: market_data_consumer.cpp
Chapter10/trading/order_gw/: order_gateway.h
Chapter10/trading/strategy/: liquidity_taker.cpp  market_order.cpp  market_order_book.cpp  om_order.h  order_manager.h  trade_engine.cpp  trade_engine.h
Chapter12/: requirements.txt
Chapter3/: strict_alias.cpp
Chapter4/: logging.h  macros.h  socket_example.cpp  socket_utils.h  tcp_server.cpp  tcp_socket.cpp  tcp_socket.h  thread_example.cpp  thread_utils.h  time_utils.h
Chapter6/common/: lf_queue.h  logging.h  types.h
Chapter6/exchange/: exchange_main.cpp
Chapter6/exchange/market_data/: market_update.h
Chapter6/exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order.h  me_order_book.cpp  me_order_book.h
Chapter6/exchange/order_server/: client_request.h  client_response.h
common/: CMakeLists.txt  lf_queue.h  logging.h  macros.h  opt_logging.h  opt_mem_pool  perf_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.h  thread_utils.h  time_utils.h  types.h
exchange/: CMakeLists.txt  exchange_main.cpp
exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  market_update.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order.cpp  me_order.h  me_order_book.cpp  me_order_book.h  unordered_map_me_order_book.cpp  unordered_map_me_order_book.h
exchange/order_server/: client_request.h  client_response.h  fifo_sequencer.h  order_server.cpp  order_server.h
notebook/: perf_analysis.ipynb
scripts/: build.sh  perf_benchmark.py  run_clients.sh  run_exchange_and_clients.sh
trading/: CMakeLists.txt  trading_main.cpp
trading/market_data/: market_data_consumer.cpp  market_data_consumer.h
trading/order_gw/: order_gateway.cpp  order_gateway.h
trading/strategy/: feature_engine.h  liquidity_taker.h  manual_algorithm.cpp  manual_algorithm.h  market_maker.cpp  market_maker.h  market_order.h  market_order_book.cpp  market_order_book.h  om_order.h  order_manager.cpp  order_manager.h  position_keeper.h  risk_manager.cpp  risk_manager.h  trade_engine.cpp  trade_engine.h
(+13 files in other folders)
